feat: aq simulator and new structure
